--- a/Download Data.ipynb
+++ b/Download Data.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,8 @@
     "    \n",
     "        tf['volume'] = tf['volumeto']\n",
     "        tf = tf.drop(['time', 'volumefrom', 'volumeto'], axis = 1)\n",
-    "        tf.to_csv(r'C:\\Users\\leo_s\\Documents\\Git Projects\\zipline_data\\daily\\\\' + item + '.csv')\n",
+    "        #tf.to_csv(r'C:\\Users\\leo_s\\Documents\\Git Projects\\zipline_data\\daily\\\\' + item + '.csv')\n",
+    "        tf.to_csv('/home/hao/Documents/trading_strats/data/daily/' + item + '.csv')\n",
     "        \n",
     "    except:\n",
     "        \n",
@@ -128,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
